ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: search-api
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: search.altana.ai
        http:
          paths:
            - path: /
              backend:
                serviceName: search-api
                servicePort: 80
---
apiVersion: apps/v1
kind: Ingress
metadata:
  name: graph-api
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: graph.altana.ai
        http:
          paths:
            - path: /
              backend:
                serviceName: search-api
                servicePort: 80
